# teamclaw

./: .dockerignore  .gitignore  .mcp.json  2026-04-10-wiki-links-design.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md  build.config.dev.json  build.config.example.json  build.config.json  build.config.local.json  build.config.production.json  build.config.teal.json  opencode.json  package.json  pnpm-lock.yaml  vitest.config.e2e.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
TeamClawMobile/: ExportOptions.plist  project.yml
apps/desktop/tauri-plugin-mcp-local/: Cargo.toml  build.rs
apps/desktop/tauri-plugin-mcp-local/guest-js/: index.ts
apps/desktop/tauri-plugin-mcp-local/permissions/: default.toml
apps/desktop/tauri-plugin-mcp-local/permissions/autogenerated/: reference.md
apps/desktop/tauri-plugin-mcp-local/permissions/autogenerated/commands/: push_ipc.toml  push_log.toml
apps/desktop/tauri-plugin-mcp-local/permissions/schemas/: schema.json
apps/desktop/tauri-plugin-mcp-local/src/: desktop.rs  error.rs  ipc_buffer.rs  lib.rs  listener_patch.js  log_buffer.rs  models.rs  socket_server.rs
apps/desktop/tauri-plugin-mcp-local/src/native_input/: js_fallback.rs  macos.rs  mod.rs
apps/desktop/tauri-plugin-mcp-local/src/platform/: macos.rs  shared.rs  unix.rs  windows.rs
apps/desktop/tauri-plugin-mcp-local/src/shared/: mod.rs
apps/desktop/tauri-plugin-mcp-local/src/tools/: app_bridge.rs  app_info.rs  cookies.rs  devtools.rs  dispatch_pointer.rs  events.rs  execute_js.rs  inspect_element.rs  list_windows.rs  local_storage.rs  log_mark.rs  manage_ipc.rs  mod.rs  mouse_movement.rs  navigate_webview.rs  ping.rs  push_ipc.rs  push_log.rs  query_logs.rs  read_text.rs  restart_app.rs  take_screenshot.rs  text_input.rs  webview.rs  webview_state.rs  window_manager.rs  zoom.rs
autoui-mcp/: Cargo.toml  README.md  package.json
autoui-mcp/src/: config.rs  keyboard.rs  keys.rs  main.rs  mcp.rs  mouse.rs  screenshot.rs  vision.rs
deploy/: .env.example  Caddyfile  build-push.sh  deploy.sh  docker-compose.yml
docs/: chrome-extension-design.md  chrome-webstore-privacy-practices.md  remote-tools.md  workspace-local-cloud.md
fc/: deploy.sh  index.mjs  publish-code-aliyun.sh  s.yaml
proto/: amux.proto  teamclaw.proto
scripts/: amuxdctl.sh  build-windows-daemon.sh  build-windows.js  build-windows.ps1  bump-desktop-version.mjs  chrome-webstore-oauth.sh  deeplink-dev.mjs  dev-daemon.sh  dev-desktop.sh  ensure-amuxd-sidecar.js  finalize-oss-release-conf.py  install-mac-cn.sh  install-mac.sh  install-opencode-fork.sh  llm-proxy.mjs  preflight-desktop-release.sh  publish-amuxd-fragment.py  publish-oss-release.py  run-daemon.js  (+20 more)
tests/mqtt-e2e/: Cargo.toml
tests/mqtt-e2e/src/: mqtt_relay_e2e.rs
(+983 files in other folders)
