[package]
name = "autoui-mcp"
version = "0.1.3"
description = "Desktop automation MCP Server – Rust port of pyautogui-mcp"
edition = "2021"

[[bin]]
name = "autoui-mcp"
path = "src/main.rs"

[dependencies]
# MCP protocol
rmcp = { version = "0.3", features = ["server", "transport-io"] }
schemars = "1.0"

# Mouse / keyboard automation
enigo = "0.6"

# Screenshot capture
xcap = "0.8"

# Image processing
image = "0.25"

# HTTP client (Qwen3-VL API)
reqwest = { version = "0.12", features = ["json"] }

# Clipboard (cross-platform Unicode paste)
arboard = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Regex (clean VLM responses)
regex = "1"

# Base64 encoding (screenshots for VLM)
base64 = "0.22"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
